--- a/POCs/staticserver/build.gradle
+++ b/POCs/staticserver/build.gradle
@@ -38,6 +38,8 @@ dependencies {
 	implementation 'org.springframework.cloud:spring-cloud-starter-netflix-hystrix-dashboard'
 	implementation 'org.springframework.session:spring-session-core'
 	runtimeOnly 'org.postgresql:postgresql'
+}
+dependencies {
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testImplementation 'org.springframework.cloud:spring-cloud-starter-contract-verifier'
 	testImplementation 'org.springframework.restdocs:spring-restdocs-mockmvc'
