--- a/POCs/staticserver/build.gradle
+++ b/POCs/staticserver/build.gradle
@@ -30,13 +30,13 @@ ext {
 }
 
 dependencies {
-	implementation 'org.springframework.boot:spring-boot-starter-actuator'
-	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+//	implementation 'org.springframework.boot:spring-boot-starter-actuator'
+//	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
-	implementation 'org.liquibase:liquibase-core'
-	implementation 'org.springframework.cloud:spring-cloud-starter-netflix-hystrix'
-	implementation 'org.springframework.cloud:spring-cloud-starter-netflix-hystrix-dashboard'
-	implementation 'org.springframework.session:spring-session-core'
+//	implementation 'org.liquibase:liquibase-core'
+//	implementation 'org.springframework.cloud:spring-cloud-starter-netflix-hystrix'
+//	implementation 'org.springframework.cloud:spring-cloud-starter-netflix-hystrix-dashboard'
+//	implementation 'org.springframework.session:spring-session-core'
 	runtimeOnly 'org.postgresql:postgresql'
 }
 dependencies {
