-[POC.STATICSERVER] Added some code but still the application does not serve the static content on standard run.
Former-commit-id: 7bd6c633b36f67c55eafc09fdcaa56e731d05fd9

--- a/POCs/staticserver/.gitignore
+++ b/POCs/staticserver/.gitignore
@@ -34,3 +34,8 @@ out/
 
 ### VS Code ###
 .vscode/
+
+### POC Application
+#staticserver/src/main/resources/static/pocangstatic/
+src/main/resources/static/pocangstatic/
+
