--- a/POCs/staticserver/build.gradle
+++ b/POCs/staticserver/build.gradle
@@ -38,6 +38,9 @@ dependencies {
 //	implementation 'org.springframework.cloud:spring-cloud-starter-netflix-hystrix-dashboard'
 //	implementation 'org.springframework.session:spring-session-core'
 	runtimeOnly 'org.postgresql:postgresql'
+	// https://mvnrepository.com/artifact/org.apache.commons/commons-lang3
+	implementation group: 'org.apache.commons', name: 'commons-lang3', version: '3.9'
+
 }
 dependencies {
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
