--- a/POCs/frontend/package.json
+++ b/POCs/frontend/package.json
@@ -8,7 +8,7 @@
     "install:clean": "rm -rf ../server/app/*.*",
     "install:copy": "npm run install:clean && cp --recursive --verbose ./dist/pocangstatic/* ../server/app",
     "build:dev": "ng build --aot --prod && npm run install:copy",
-    "build": "ng build --aot --prod --base-href /app/ && npm run install:copy",
+    "build": "ng build --aot --prod --base-href /ui/ && npm run install:copy",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e"
