--- a/POCs/attdangular/package.json
+++ b/POCs/attdangular/package.json
@@ -7,7 +7,8 @@
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
-    "e2e": "ng e2e"
+    "e2e": "ng e2e",
+    "tdd:report": "node index.js"
   },
   "private": true,
   "dependencies": {
@@ -36,6 +37,7 @@
     "chai": "4.2.0",
     "codelyzer": "^5.0.0",
     "cucumber": "5.1.0",
+    "cucumber-html-reporter": "5.0.2",
     "jasmine-core": "~3.4.0",
     "jasmine-spec-reporter": "~4.2.1",
     "karma": "~4.1.0",
@@ -45,6 +47,7 @@
     "karma-jasmine-html-reporter": "^1.4.0",
     "protractor": "~5.4.0",
     "protractor-cucumber-framework": "6.1.3",
+    "protractor-multiple-cucumber-html-reporter-plugin": "1.8.1",
     "ts-node": "~7.0.0",
     "tslint": "~5.15.0",
     "typescript": "~3.5.3"
