--- a/POCs/attdangular/package.json
+++ b/POCs/attdangular/package.json
@@ -8,6 +8,7 @@
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
+    "atdd": "protractor e2e/protractor-cucumber.conf.js",
     "tdd:report": "node index.js"
   },
   "private": true,
