--- a/POCs/server/package.json
+++ b/POCs/server/package.json
@@ -1,15 +1,20 @@
 {
-  "name": "neocom.server",
-  "version": "0.1.0",
-  "description": "POC static server configured for an express server that will serve the frontend static pages along with the Angular 8 forntend server and the routing to the /api backend server.",
-  "main": "index.js",
-  "scripts": {
-    "start": "node index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "author": "Adam Antinoo (adamantinoo.git@gmail.com)",
-  "license": "ISC",
-  "dependencies": {
-    "express": "4.17.1"
-  }
+    "name": "neocom.server",
+    "version": "0.1.0",
+    "description": "POC static server configured for an express server that will serve the frontend static pages along with the Angular 8 forntend server and the routing to the /api backend server.",
+    "main": "index.js",
+    "scripts": {
+        "start": "node server.js",
+        "test": "echo \"Error: no test specified\" && exit 1"
+    },
+    "author": "Adam Antinoo (adamantinoo.git@gmail.com)",
+    "license": "ISC",
+    "dependencies": {
+        "compression": "1.7.4",
+        "config": "3.2.3",
+        "express": "4.17.1",
+        "express-http-proxy": "1.6.0",
+        "path": "0.12.7",
+        "request": "2.88.0"
+    }
 }
