-[POC] Mixing the Typescript and the Cucumber for Cypress tests.
Former-commit-id: bd997760a577036b561742f83e83e102f17b3873

--- a/POCs/cypressConf/package.json
+++ b/POCs/cypressConf/package.json
@@ -9,6 +9,8 @@
         "lint": "ng lint",
         "compodoc": "compodoc -p tsconfig.json --theme laravel",
         "typedoc": "typedoc --mode modules -module commonjs --exclude **/*.spec.ts --out docs/typedoc src/app",
+        "cypress:open": "./node_modules/.bin/cypress open",
+        "cypress:run": "./node_modules/.bin/cypress run",
         "start:support": "bash ./support/support-services.sh start",
         "start:dev": "ng serve --progress --proxy-config proxy.conf.json --base-href /app --public-host neocom.infinity.local",
         "start:server": "npm run build:dev && node server.js",
