--- a/POCs/cypressConf/cypress/tsconfig.json
+++ b/POCs/cypressConf/cypress/tsconfig.json
@@ -1,4 +1,5 @@
 {
+  "extends": "../tsconfig.json",
   "compilerOptions": {
     "strict": true,
     "baseUrl": "../node_modules",
@@ -6,9 +7,8 @@
     "lib": ["es5", "dom"],
     "types": ["cypress"]
   },
-  "extends": "../tsconfig.json",
   "include": [
-    "**/*.ts",
-    "integration/*.feature"
+    "../node_modules/cypress",
+    "**/*.ts"
   ]
 }
