--- a/POCs/cypressConf/package.json
+++ b/POCs/cypressConf/package.json
@@ -11,6 +11,9 @@
         "cypress:open": "$(npm bin)/cypress open"
     },
     "private": true,
+    "cypress-cucumber-preprocessor": {
+        "nonGlobalStepDefinitions": true
+    },
     "dependencies": {
         "@angular/animations": "~8.2.14",
         "@angular/common": "~8.2.14",
@@ -35,6 +38,7 @@
         "@types/node": "~8.9.4",
         "codelyzer": "^5.0.0",
         "cypress": "3.8.2",
+        "cypress-cucumber-preprocessor": "^2.0.1",
         "jasmine-core": "~3.4.0",
         "jasmine-spec-reporter": "~4.2.1",
         "karma": "~4.1.0",
