--- a/POCs/cypressConf/package.json
+++ b/POCs/cypressConf/package.json
@@ -33,6 +33,7 @@
         "@angular/compiler-cli": "~8.2.14",
         "@angular/language-service": "~8.2.14",
         "@bahmutov/add-typescript-to-cypress": "^2.1.2",
+        "@types/cypress-cucumber-preprocessor": "^1.14.0",
         "@types/jasmine": "~3.3.8",
         "@types/jasminewd2": "~2.0.3",
         "@types/node": "~8.9.4",
