--- a/POCs/cypressConf/package.json
+++ b/POCs/cypressConf/package.json
@@ -33,6 +33,7 @@
         "@angular/compiler-cli": "~8.2.14",
         "@angular/language-service": "~8.2.14",
         "@bahmutov/add-typescript-to-cypress": "^2.1.2",
+        "@cypress/code-coverage": "1.10.4",
         "@types/cypress-cucumber-preprocessor": "^1.14.0",
         "@types/jasmine": "~3.3.8",
         "@types/jasminewd2": "~2.0.3",
@@ -40,6 +41,7 @@
         "codelyzer": "^5.0.0",
         "cypress": "3.8.2",
         "cypress-cucumber-preprocessor": "^2.0.1",
+        "istanbul-lib-coverage": "3.0.0",
         "jasmine-core": "~3.4.0",
         "jasmine-spec-reporter": "~4.2.1",
         "karma": "~4.1.0",
@@ -47,6 +49,7 @@
         "karma-coverage-istanbul-reporter": "~2.0.1",
         "karma-jasmine": "~2.0.1",
         "karma-jasmine-html-reporter": "^1.4.0",
+        "nyc": "15.0.0",
         "protractor": "~5.4.0",
         "ts-node": "~7.0.0",
         "tslint": "~5.15.0",
