--- a/POCs/cypressConf/cypress/tsconfig.json
+++ b/POCs/cypressConf/cypress/tsconfig.json
@@ -8,7 +8,7 @@
     "types": ["cypress"]
   },
   "include": [
-    "../node_modules/cypress",
-    "**/*.ts"
+    "**/*.ts",
+    "integration/*.feature"
   ]
 }
